feat: funds transactions costs
    - feat(client): use fees+prices instead of costs on transactions
    - feat(api): use fees and price to calculate fund transaction costs
    - chore: updated docs
    - feat(api): migration for fund transaction costs
